err.txt
   Compiling ark-manager v0.1.0 (/home/nan0scho1ar/repos/rust-commandline-example)
warning: unused import: `Terminal`
  --> src/render.rs:11:5
   |
11 |     Terminal,
   |     ^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: unused import: `ArkServer`
 --> src/service.rs:1:18
  |
1 | use crate::ark::{ArkServer, Error, RenderState};
  |                  ^^^^^^^^^

warning: unused import: `crate::DB_PATH`
 --> src/service.rs:2:5
  |
2 | use crate::DB_PATH;
  |     ^^^^^^^^^^^^^^

warning: unused import: `std::fs`
 --> src/service.rs:4:5
  |
4 | use std::fs;
  |     ^^^^^^^

warning: unused import: `tui::widgets::ListState`
 --> src/service.rs:5:5
  |
5 | use tui::widgets::ListState;
  |     ^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `Write`, `self`
 --> src/service.rs:7:15
  |
7 | use std::io::{self, Write};
  |               ^^^^  ^^^^^

warning: unused imports: `Event as CEvent`, `KeyCode`, `disable_raw_mode`, `enable_raw_mode`, `self`
 --> src/ark.rs:6:13
  |
6 |     event::{self, Event as CEvent, KeyCode},
  |             ^^^^  ^^^^^^^^^^^^^^^  ^^^^^^^
7 |     terminal::{disable_raw_mode, enable_raw_mode},
  |                ^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^

warning: unused imports: `Alignment`, `Block`, `BorderType`, `Borders`, `Color`, `Constraint`, `Direction`, `Layout`, `Modifier`, `Paragraph`, `Span`, `Spans`, `Style`, `Tabs`, `Terminal`, `backend::CrosstermBackend`
  --> src/ark.rs:10:5
   |
10 |     backend::CrosstermBackend,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
11 |     layout::{Alignment, Constraint, Direction, Layout},
   |              ^^^^^^^^^  ^^^^^^^^^^  ^^^^^^^^^  ^^^^^^
12 |     style::{Color, Modifier, Style},
   |             ^^^^^  ^^^^^^^^  ^^^^^
13 |     text::{Span, Spans},
   |            ^^^^  ^^^^^
14 |     widgets::{
15 |         Block, BorderType, Borders, ListState, Paragraph, Tabs, TableState,
   |         ^^^^^  ^^^^^^^^^^  ^^^^^^^             ^^^^^^^^^  ^^^^
16 |     },
17 |     Terminal,
   |     ^^^^^^^^

warning: unused import: `ArkServerMod`
 --> src/input.rs:1:31
  |
1 | use crate::ark::{RenderState, ArkServerMod, Error, MenuItem, Event, InputEvent};
  |                               ^^^^^^^^^^^^

warning: unused imports: `get_server`, `read_db`
 --> src/input.rs:3:17
  |
3 | use crate::db::{get_server, get_num_servers, get_num_server_mods, add_ark_server_mod_to_db, remove_ark_server_mod_at_index, read_db, add_...
  |                 ^^^^^^^^^^                                                                                                  ^^^^^^^

warning: unused variable: `state`
 --> src/service.rs:9:27
  |
9 | pub fn restart_ark_server(state: &RenderState) -> Result<(), Error> {
  |                           ^^^^^ help: if this is intentional, prefix it with an underscore: `_state`
  |
  = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `state`
  --> src/service.rs:21:30
   |
21 | pub fn start_stop_ark_server(state: &RenderState) -> Result<(), Error> {
   |                              ^^^^^ help: if this is intentional, prefix it with an underscore: `_state`

warning: unused variable: `state`
  --> src/input.rs:73:21
   |
73 | pub fn process_home(state: &mut RenderState, event: crossterm::event::KeyEvent) -> Result<(), Error> {
   |                     ^^^^^ help: if this is intentional, prefix it with an underscore: `_state`

error[E0507]: cannot move out of index of `Vec<std::string::String>`
   --> src/render.rs:135:34
    |
135 |             Cell::from(Span::raw(vals[0])),
    |                                  ^^^^^^^ move occurs because value has type `std::string::String`, which does not implement the `Copy` trait

error[E0507]: cannot move out of index of `Vec<std::string::String>`
   --> src/render.rs:139:34
    |
139 |             Cell::from(Span::raw(vals[1])),
    |                                  ^^^^^^^ move occurs because value has type `std::string::String`, which does not implement the `Copy` trait

error[E0507]: cannot move out of index of `Vec<std::string::String>`
   --> src/render.rs:143:34
    |
143 |             Cell::from(Span::raw(vals[2])),
    |                                  ^^^^^^^ move occurs because value has type `std::string::String`, which does not implement the `Copy` trait

error[E0507]: cannot move out of index of `Vec<std::string::String>`
   --> src/render.rs:147:34
    |
147 |             Cell::from(Span::raw(vals[3])),
    |                                  ^^^^^^^ move occurs because value has type `std::string::String`, which does not implement the `Copy` trait

error[E0507]: cannot move out of index of `Vec<std::string::String>`
   --> src/render.rs:151:34
    |
151 |             Cell::from(Span::raw(vals[4])),
    |                                  ^^^^^^^ move occurs because value has type `std::string::String`, which does not implement the `Copy` trait

error: aborting due to 5 previous errors; 13 warnings emitted

For more information about this error, try `rustc --explain E0507`.
error: could not compile `ark-manager`

To learn more, run the command again with --verbose.
